@@ -162,18 +162,17 @@ rc.options(\dots)
       When the \code{ns} setting is turned on, completion inside
       namespaces is attempted when a token is preceded by the \code{::}
       or \code{:::} operators.  Additionally, the basic completion
-      mechanism is extended to include attached namespaces, or more
-      precisely, \code{foopkg::} becomes a valid completion of
-      \code{foo} if the return value of \code{\link{search}()} includes
-      the string \code{"package:foopkg"}.
+      mechanism is extended to include all loaded namespaces, i.e.,
+      \code{foopkg::} becomes a valid completion of \code{foo} if
+      \code{"foopkg"} is a loaded namespace.
 
-      The completion of package namespaces applies only to attached
-      packages, i.e.\sspace{}if \code{MASS} is not attached (whether or not it
-      is loaded), \code{MAS} will not complete to \code{MASS::}.
-      However, attempted completion \emph{inside} an apparent namespace
-      will attempt to load the namespace if it is not already loaded,
-      e.g.\sspace{}trying to complete on \code{MASS::fr} will load \code{MASS}
-      (but not necessarily attach it) even if it is not already loaded.
+      The completion of package namespaces applies only to already
+      loaded namespaces, i.e.\sspace{}if \code{MASS} is not loaded,
+      \code{MAS} will not complete to \code{MASS::}.  However, attempted
+      completion \emph{inside} an apparent namespace will attempt to
+      load the namespace if it is not already loaded,
+      e.g.\sspace{}trying to complete on \code{MASS::fr} will load
+      \code{MASS} if it is not already loaded.
     }
 
     \item{\bold{Completion for help items}:}{
@@ -320,7 +319,12 @@ rc.options(\dots)
 
   Potential completions of the token are generated by
   \code{.completeToken}, and the completions can be retrieved as an \R
-  character vector using \code{.retrieveCompletions}.
+  character vector using \code{.retrieveCompletions}. It is possible for
+  the user to specify a replacement for this function by setting
+  \code{rc.options("custom.completer")}; if not \code{NULL}, this
+  function is called to compute potential completions.  This facility is
+  meant to help in situations where completing as R code is not
+  appropriate. See source code for more details.
 
   If the cursor is inside quotes, completion may be suppressed.  The
   function \code{.getFileComp} can be used after a call to
